--- a/front/template/ts_react/package.json
+++ b/front/template/ts_react/package.json
@@ -7,5 +7,13 @@
     "test": "compile"
   },
   "author": "zsuzitor",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "source-map-loader": "^1.1.2",
+    "ts-loader": "^8.0.11"
+  }
 }
